--- a/data/cities/santa-cruz-de-la-sierra/wow.yml
+++ b/data/cities/santa-cruz-de-la-sierra/wow.yml
@@ -1,11 +1,11 @@
-id: 409548506
+id: 441302316
 type: way
-latitude: -17.77341
-longitude: -63.19064
+latitude: -17.78568
+longitude: -63.20416
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Avenida Busch"
+street: "Avenida Roca y Coronado"
 housenumber: 
 phone: ""
-opening_hours: "24/7"
+opening_hours: ""
 website: ""
