--- a/data/cities/cochabamba/imcruz-avenida-america-3.yml
+++ b/data/cities/cochabamba/imcruz-avenida-america-3.yml
@@ -1,11 +1,11 @@
-id: 921936878
+id: 974844238
 type: way
-latitude: -17.37177
-longitude: -66.1761
+latitude: -17.37317
+longitude: -66.15858
 postcode: ""
 city: Cochabamba
 street: "Avenida América"
-housenumber: 1339
+housenumber: 
 phone: ""
 opening_hours: ""
 website: "https://www.imcruz.com/"
