--- a/data/cities/el-alto/el-ceibo.yml
+++ b/data/cities/el-alto/el-ceibo.yml
@@ -8,4 +8,4 @@ street: "Avenida Juan Pablo II"
 housenumber: 2560
 phone: "+591 22841078"
 opening_hours: ""
-website: "http://www.elceibo.com"
+website: "https://www.elceibo.com/"
