--- a/data/cities/el-alto/nibol.yml
+++ b/data/cities/el-alto/nibol.yml
@@ -8,4 +8,4 @@ street: "Avenida 6 de Marzo"
 housenumber: 100
 phone: "+591 2 2818080"
 opening_hours: "Mo-Fr 08:30-17:30"
-website: "http://www.nibol.com.bo"
+website: "https://www.nibol.com.bo/"
