--- a/data/cities/la-paz/importadora-linz.yml
+++ b/data/cities/la-paz/importadora-linz.yml
@@ -8,4 +8,4 @@ street: "Avenida America"
 housenumber: 355
 phone: "+591 2 2454801"
 opening_hours: "09:00-12:30,14:30-19:00"
-website: "www.importadoralinz.com"
+website: "https://www.importadoralinz.com/"
