--- a/data/cities/la-paz/southtreks.yml
+++ b/data/cities/la-paz/southtreks.yml
@@ -8,4 +8,4 @@ street: "Calle Sagárnaga"
 housenumber: 227
 phone: "+591-71970444"
 opening_hours: "24/7"
-website: "http://www.southtreks.com"
+website: "https://www.southtreks.com/"
