--- a/data/cities/la-paz/volkswagen.yml
+++ b/data/cities/la-paz/volkswagen.yml
@@ -8,4 +8,4 @@ street: "Calle Yanacocha"
 housenumber: 1004
 phone: "22149834"
 opening_hours: "Mo-Fr 09:00-19:30; Sa 09:00-13:00"
-website: "http://www.volkswagen.bo"
+website: "https://www.volkswagen.bo/"
