--- a/data/cities/cochabamba/imcruz-avenida-america.yml
+++ b/data/cities/cochabamba/imcruz-avenida-america.yml
@@ -1,11 +1,11 @@
-id: 974844222
+id: 921936878
 type: way
-latitude: -17.37285
-longitude: -66.15952
+latitude: -17.37177
+longitude: -66.1761
 postcode: ""
 city: Cochabamba
 street: "Avenida América"
-housenumber: 342
+housenumber: 1339
 phone: ""
-opening_hours: "Mo-Fr 09:00-19:30; Sa 09:00-16:30"
-website: ""
+opening_hours: ""
+website: "https://www.imcruz.com/"
