--- a/data/cities/la-paz/gravity-assisted-mountain-biking.yml
+++ b/data/cities/la-paz/gravity-assisted-mountain-biking.yml
@@ -8,4 +8,4 @@ street: "Calle Linares"
 housenumber: 940
 phone: "2310218"
 opening_hours: "Mo-Fr 09:00-19:00; Sa 10:00-15:00; Su 14:00-18:00"
-website: "http://www.gravitybolivia.com"
+website: "https://www.gravitybolivia.com/"
