--- a/data/cities/la-paz/ironman-4x4-bolivia.yml
+++ b/data/cities/la-paz/ironman-4x4-bolivia.yml
@@ -8,4 +8,4 @@ street: "Calle 5"
 housenumber: 842
 phone: ""
 opening_hours: "Mo-Fr 08:00-21:00"
-website: "http://www.ironman4x4.com.bo"
+website: "https://www.ironman4x4.com.bo/"
