--- a/data/cities/santa-cruz-de-la-sierra/boleteria.yml
+++ b/data/cities/santa-cruz-de-la-sierra/boleteria.yml
@@ -1,10 +1,10 @@
-id: 11221071388
+id: 11221659067
 type: node
-latitude: -17.7852
-longitude: -63.2087
+latitude: -17.78287
+longitude: -63.20789
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Avenida Roca y Coronado"
+street: "Avenida José Banegas"
 housenumber: 
 phone: ""
 opening_hours: ""
