update content and data

--- a/data/cities/cochabamba/casa-ideas.yml
+++ b/data/cities/cochabamba/casa-ideas.yml
@@ -8,4 +8,4 @@ street: "Avenida General José Manuel Pando"
 housenumber: 
 phone: "+591 4 4036258"
 opening_hours: "Mo-Sa 10:00-22:00"
-website: "http://www.casaideas.com.bo/"
+website: "https://www.casaideas.com.bo/"
