--- a/data/cities/cochabamba/hp-medical.yml
+++ b/data/cities/cochabamba/hp-medical.yml
@@ -8,4 +8,4 @@ street: "Calle Antezana"
 housenumber: 542
 phone: "+591 4 4526157"
 opening_hours: ""
-website: "http://www.hpmedical.com.bo/"
+website: "https://hpmedical.com.bo/"
