--- a/data/cities/cochabamba/luigis-centro-familiar.yml
+++ b/data/cities/cochabamba/luigis-centro-familiar.yml
@@ -8,4 +8,4 @@ street: "Avenida José Ballivián"
 housenumber: 606
 phone: "+591 4 4250265"
 opening_hours: "Mo-Su 11:00-23:00"
-website: "http://www.luigis.com.bo/"
+website: "https://www.luigis.com.bo/"
