--- a/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-jose-banegas.yml
+++ b/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-jose-banegas.yml
@@ -1,10 +1,10 @@
-id: 4392641808
+id: 11221659067
 type: node
-latitude: -17.78296
-longitude: -63.18394
+latitude: -17.78287
+longitude: -63.20789
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Junín"
+street: "Avenida José Banegas"
 housenumber: 
 phone: ""
 opening_hours: ""
