--- a/data/cities/ciudad-satelite/tienda-de-abarrotes-calle-30-b-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-abarrotes-calle-30-b-2.yml
@@ -1,11 +1,11 @@
-id: 7490386312
+id: 7539463336
 type: node
-latitude: -16.53058
-longitude: -68.15513
+latitude: -16.52993
+longitude: -68.15646
 postcode: ""
 city: Ciudad Satélite
 street: "Calle 30 B"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-18:00"
 website: ""
