--- a/data/cities/cochabamba/e-lashes.yml
+++ b/data/cities/cochabamba/e-lashes.yml
@@ -8,4 +8,4 @@ street: "Avenida América"
 housenumber: 
 phone: "+591 68460848"
 opening_hours: ""
-website: "http://e-lashes.com/"
+website: "https://e-lashes.com/"
