--- a/data/cities/cochabamba/luigis-boutique.yml
+++ b/data/cities/cochabamba/luigis-boutique.yml
@@ -8,4 +8,4 @@ street: "Avenida José Ballivián"
 housenumber: 606
 phone: ""
 opening_hours: ""
-website: "www.luigis.com.bo"
+website: "https://www.luigis.com.bo/"
