--- a/data/cities/santa-cruz-de-la-sierra/cobocaucho.yml
+++ b/data/cities/santa-cruz-de-la-sierra/cobocaucho.yml
@@ -8,4 +8,4 @@ street: "Avenida Vigen de Cotoca"
 housenumber: 
 phone: "+591-3-3487077"
 opening_hours: "08:00-18:30"
-website: "http://www.cobocaucho.com/"
+website: "https://www.cobocaucho.com/"
