--- a/data/cities/santa-cruz-de-la-sierra/fragance.yml
+++ b/data/cities/santa-cruz-de-la-sierra/fragance.yml
@@ -8,4 +8,4 @@ street: "Avenida Teniente Mamerto Cuéllar"
 housenumber: 1660
 phone: "+59175015038"
 opening_hours: "Mo-Sa 09:00-13:00, Mo-Fr 15:00-19:30, Sa 16:00-19:30"
-website: "http://fragancebolivia.com"
+website: "https://fragancebolivia.com/"
