--- a/data/cities/santa-cruz-de-la-sierra/lupo-calle-florida.yml
+++ b/data/cities/santa-cruz-de-la-sierra/lupo-calle-florida.yml
@@ -1,10 +1,10 @@
-id: 11221071389
+id: 4377609034
 type: node
-latitude: -17.78523
-longitude: -63.20903
+latitude: -17.78172
+longitude: -63.18229
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Avenida Roca y Coronado"
+street: "Calle Florida"
 housenumber: 
 phone: ""
 opening_hours: ""
