--- a/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero-3.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero-3.yml
@@ -1,11 +1,11 @@
-id: 6682084260
+id: 6685126586
 type: node
-latitude: -16.52516
-longitude: -68.152
+latitude: -16.53025
+longitude: -68.15409
 postcode: ""
 city: Ciudad Satélite
 street: "Arturo Ballivian Otero"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-18:00"
 website: ""
