--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-diego-de-portugal-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-diego-de-portugal-2.yml
@@ -1,11 +1,11 @@
-id: 7539463328
+id: 7519600629
 type: node
-latitude: -16.53019
-longitude: -68.15662
+latitude: -16.52997
+longitude: -68.15666
 postcode: ""
 city: Ciudad Satélite
 street: "Calle Diego de Portugal"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Sa 09:00-18:00"
+opening_hours: ""
 website: ""
