--- a/data/cities/santa-cruz-de-la-sierra/opti-corp.yml
+++ b/data/cities/santa-cruz-de-la-sierra/opti-corp.yml
@@ -1,10 +1,10 @@
-id: 4392641808
+id: 4394915415
 type: node
-latitude: -17.78296
-longitude: -63.18394
+latitude: -17.78233
+longitude: -63.18377
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Junín"
+street: "Calle 21 de Mayo"
 housenumber: 
 phone: ""
 opening_hours: ""
