update content and data

--- a/data/cities/cochabamba/galeria-walter-terrazas-prado.yml
+++ b/data/cities/cochabamba/galeria-walter-terrazas-prado.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: "Avenida Heroínas"
 housenumber: 284
-phone: ""
+phone: "+591 4 4227561"
 opening_hours: ""
 website: ""
