--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-nunez-del-prado-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-nunez-del-prado-2.yml
@@ -1,10 +1,10 @@
-id: 4548572010
+id: 7546680377
 type: node
-latitude: -16.53063
-longitude: -68.15232
+latitude: -16.52231
+longitude: -68.15271
 postcode: ""
 city: Ciudad Satélite
-street: "Calle 29 C"
+street: "Calle Nuñez del Prado"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 09:00-18:00"
