--- a/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
+++ b/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
@@ -1,10 +1,10 @@
-id: 8837160728
+id: 4400066933
 type: node
-latitude: -16.52368
-longitude: -68.15263
+latitude: -16.52461
+longitude: -68.14964
 postcode: ""
 city: Ciudad Satélite
-street: "Calle de las Culturas 17 B"
+street: "Avenida Satélite"
 housenumber: 
 phone: ""
 opening_hours: ""
