update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio.yml
@@ -1,11 +1,11 @@
-id: 4545693357
+id: 4548572051
 type: node
-latitude: -16.52485
-longitude: -68.15703
+latitude: -16.52596
+longitude: -68.15064
 postcode: ""
 city: Ciudad Satélite
-street: "Avenida Escalona y Aguero"
+street: "Calle Hno. E. Morales"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Sa 09:00-18:00"
+opening_hours: ""
 website: ""
