--- a/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-6.yml
@@ -1,10 +1,10 @@
-id: 4548572051
+id: 9784032962
 type: node
-latitude: -16.52596
-longitude: -68.15064
+latitude: -16.52663
+longitude: -68.15765
 postcode: ""
 city: Ciudad Satélite
-street: "Calle Hno. E. Morales"
+street: "Avenida Escalona y Aguero"
 housenumber: 
 phone: ""
 opening_hours: ""
