--- a/data/cities/santa-cruz-de-la-sierra/lupo-calle-velasco.yml
+++ b/data/cities/santa-cruz-de-la-sierra/lupo-calle-velasco.yml
@@ -1,10 +1,10 @@
-id: 11221659067
+id: 4394856645
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.78705
+longitude: -63.18331
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Avenida José Banegas"
+street: "Calle Velasco"
 housenumber: 
 phone: ""
 opening_hours: ""
