--- a/data/cities/cochabamba/sharon-faride-rosen.yml
+++ b/data/cities/cochabamba/sharon-faride-rosen.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: "Calle 25 de Mayo"
 housenumber: 687
-phone: "+591-72238429"
-opening_hours: "Mo-Fr 09:30-12:30,15:00-19:30; Sa 09:30-18:30"
+phone: "71721790"
+opening_hours: "Mo-Fr 09:00-19:00 Sa 9:30-18:30"
 website: ""
