update content and data

--- a/data/cities/santa-cruz-de-la-sierra/taller-de-chaperio-autonorte.yml
+++ b/data/cities/santa-cruz-de-la-sierra/taller-de-chaperio-autonorte.yml
@@ -7,5 +7,5 @@ city: Santa Cruz de la Sierra
 street: "Calle Prof. Rvdo. P. Manuel Jesús Lara"
 housenumber: 100
 phone: ""
-opening_hours: "Mo-Sa 08:00-18:00"
+opening_hours: "Mo-Fr 08:30-18:00"
 website: ""
