update content and data

--- a/data/cities/la-paz/manaco.yml
+++ b/data/cities/la-paz/manaco.yml
@@ -1,10 +1,10 @@
-id: 4361736608
+id: 5250377011
 type: node
-latitude: -16.50059
-longitude: -68.13412
+latitude: -16.501
+longitude: -68.13357
 postcode: ""
 city: La Paz
-street: "Avenida 16 de Julio"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
