--- a/data/cities/la-paz/tienda-dona-nieves.yml
+++ b/data/cities/la-paz/tienda-dona-nieves.yml
@@ -1,10 +1,10 @@
-id: 5250377011
+id: 11410753148
 type: node
-latitude: -16.50085
-longitude: -68.1338
+latitude: -16.45912
+longitude: -68.10381
 postcode: ""
 city: La Paz
-street: ""
+street: "Calle 7"
 housenumber: 
 phone: ""
 opening_hours: ""
