update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio-calle-hno-e-morales.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-calle-hno-e-morales.yml
@@ -1,10 +1,10 @@
-id: 8346432152
+id: 4548572051
 type: node
-latitude: -16.52776
-longitude: -68.15141
+latitude: -16.52596
+longitude: -68.15064
 postcode: ""
 city: Ciudad Satélite
-street: "Calle Hermano E. Morales"
+street: "Calle Hno. E. Morales"
 housenumber: 
 phone: ""
 opening_hours: ""
