--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c-2.yml
@@ -1,10 +1,10 @@
-id: 7792898532
+id: 4548572010
 type: node
-latitude: -16.53026
-longitude: -68.14981
+latitude: -16.53063
+longitude: -68.15232
 postcode: ""
 city: Ciudad Satélite
-street: "Avenida Alfredo Sanjines"
+street: "Calle 29 C"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 09:00-18:00"
