--- a/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
+++ b/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
@@ -1,10 +1,10 @@
-id: 8238783181
+id: 8597535066
 type: node
-latitude: -17.39915
-longitude: -66.15285
+latitude: -17.39153
+longitude: -66.15798
 postcode: ""
 city: Cochabamba
-street: ""
+street: "Calle Mariano Baptista"
 housenumber: 
 phone: ""
 opening_hours: ""
