--- a/data/cities/la-paz/tienda-d-m.yml
+++ b/data/cities/la-paz/tienda-d-m.yml
@@ -4,7 +4,7 @@ latitude: -16.46548
 longitude: -68.10439
 postcode: ""
 city: La Paz
-street: "calle b"
+street: "Calle B"
 housenumber: 
 phone: ""
 opening_hours: "08:00-22:00"
