--- a/data/cities/la-paz/tienda-dona-m.yml
+++ b/data/cities/la-paz/tienda-dona-m.yml
@@ -4,7 +4,7 @@ latitude: -16.46562
 longitude: -68.10542
 postcode: ""
 city: La Paz
-street: "a"
+street: "Calle A"
 housenumber: 
 phone: ""
 opening_hours: "08:00-22:00"
