update content and data

--- a/data/cities/cochabamba/multicenter.yml
+++ b/data/cities/cochabamba/multicenter.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: "Avenida Uyuni"
 housenumber: 1171
-phone: "+591 4 4222279;+591 79958566"
+phone: "+591 69000100"
 opening_hours: "Mo-Sa 08:30-21:00; PH,Su 10:00-20:00"
-website: "https://www.homecenterfacil.com/"
+website: "https://www.multicenter.com.bo/"
