update content and data

--- a/data/cities/villa-tunari/ferreteria-san-lorenzo.yml
+++ b/data/cities/villa-tunari/ferreteria-san-lorenzo.yml
@@ -1,10 +1,10 @@
-id: 4315985504
+id: 11456413008
 type: node
-latitude: -16.97481
-longitude: -65.41626
+latitude: -16.98456
+longitude: -65.43075
 postcode: ""
 city: Villa Tunari
-street: ""
+street: "Avenida Integración"
 housenumber: 
 phone: ""
 opening_hours: ""
