update content and data

--- a/data/cities/la-paz/boleteria-2.yml
+++ b/data/cities/la-paz/boleteria-2.yml
@@ -1,10 +1,10 @@
-id: 8258244948
+id: 8127217101
 type: node
-latitude: -16.54403
-longitude: -68.09251
+latitude: -16.50273
+longitude: -68.12498
 postcode: ""
 city: La Paz
-street: "Avenida Costanera"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
