update content and data

--- a/data/cities/ciudad-satelite/zapateria.yml
+++ b/data/cities/ciudad-satelite/zapateria.yml
@@ -1,11 +1,11 @@
-id: 6604121129
+id: 9860800336
 type: node
-latitude: -16.52386
-longitude: -68.1515
+latitude: -16.52734
+longitude: -68.14845
 postcode: ""
 city: Ciudad Satélite
-street: "Avenida Satélite"
+street: "Avenida Alfredo Sanjines"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Fr 09:00-17:00"
+opening_hours: ""
 website: ""
