--- a/data/cities/el-alto/tienda-surtida.yml
+++ b/data/cities/el-alto/tienda-surtida.yml
@@ -1,10 +1,10 @@
-id: 5661993345
+id: 5661993359
 type: node
-latitude: -16.53255
-longitude: -68.21143
+latitude: -16.53361
+longitude: -68.21366
 postcode: ""
 city: El Alto
-street: "Ignacio Bustillos"
+street: "Avenida Vicente Ballivián"
 housenumber: 
 phone: ""
 opening_hours: ""
