--- a/data/cities/santa-cruz-de-la-sierra/fotocopias-calle-santa-barbara.yml
+++ b/data/cities/santa-cruz-de-la-sierra/fotocopias-calle-santa-barbara.yml
@@ -1,10 +1,10 @@
-id: 11221659067
+id: 4404613585
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.7831
+longitude: -63.18587
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Avenida José Banegas"
+street: "Calle Santa Bárbara"
 housenumber: 
 phone: ""
 opening_hours: ""
