--- a/data/cities/el-alto/tienda-surtida-ignacio-bustillos.yml
+++ b/data/cities/el-alto/tienda-surtida-ignacio-bustillos.yml
@@ -1,10 +1,10 @@
-id: 5661993363
+id: 5661993345
 type: node
-latitude: -16.53378
-longitude: -68.21314
+latitude: -16.53255
+longitude: -68.21143
 postcode: ""
 city: El Alto
-street: "Claudio Cortés"
+street: "Ignacio Bustillos"
 housenumber: 
 phone: ""
 opening_hours: ""
