update content and data

--- a/data/cities/cochabamba/fair-play-avenida-jose-ballivian.yml
+++ b/data/cities/cochabamba/fair-play-avenida-jose-ballivian.yml
@@ -1,7 +1,7 @@
-id: 554371099
-type: way
-latitude: -17.3864
-longitude: -66.15746
+id: 11538745825
+type: node
+latitude: -17.38617
+longitude: -66.15731
 postcode: ""
 city: Cochabamba
 street: "Avenida José Ballivián"
