--- a/data/cities/el-alto/tienda-amiga-claudio-cortes.yml
+++ b/data/cities/el-alto/tienda-amiga-claudio-cortes.yml
@@ -1,10 +1,10 @@
-id: 5661993345
+id: 5661993363
 type: node
-latitude: -16.53255
-longitude: -68.21143
+latitude: -16.53378
+longitude: -68.21314
 postcode: ""
 city: El Alto
-street: "Ignacio Bustillos"
+street: "Claudio Cortés"
 housenumber: 
 phone: ""
 opening_hours: ""
