--- a/data/cities/el-alto/tienda-surtida.yml
+++ b/data/cities/el-alto/tienda-surtida.yml
@@ -1,10 +1,10 @@
-id: 5661993359
+id: 5661993345
 type: node
-latitude: -16.53361
-longitude: -68.21366
+latitude: -16.53255
+longitude: -68.21143
 postcode: ""
 city: El Alto
-street: "Avenida Vicente Ballivián"
+street: "Ignacio Bustillos"
 housenumber: 
 phone: ""
 opening_hours: ""
