--- a/data/cities/ciudad-satelite/hambuerguesas-avenida-del-policia.yml
+++ b/data/cities/ciudad-satelite/hambuerguesas-avenida-del-policia.yml
@@ -7,5 +7,5 @@ city: Ciudad Satélite
 street: "Avenida del Policía"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "PH,Mo-Su 19:00-23:00"
 website: ""
