--- a/data/cities/ciudad-satelite/imprenta-calle-25-b.yml
+++ b/data/cities/ciudad-satelite/imprenta-calle-25-b.yml
@@ -7,5 +7,5 @@ city: Ciudad Satélite
 street: "Calle 25-B"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 08:00-18:00"
 website: ""
