--- a/data/cities/municipio-el-alto/ferreteria-calle-diego-de-portugal.yml
+++ b/data/cities/municipio-el-alto/ferreteria-calle-diego-de-portugal.yml
@@ -7,5 +7,5 @@ city: Municipio El Alto
 street: "Calle Diego de Portugal"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-18:00"
 website: ""
