--- a/data/cities/ciudad-satelite/tienda-de-variedades.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades.yml
@@ -1,11 +1,11 @@
-id: 4564028105
+id: 4589730254
 type: node
-latitude: -16.51864
-longitude: -68.15113
+latitude: -16.5238
+longitude: -68.15165
 postcode: ""
 city: Ciudad Satélite
-street: "Calle Nuñez del Prado"
+street: "Avenida Satélite"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Sa 09:00-18:00"
+opening_hours: ""
 website: ""
