--- a/data/cities/cochabamba/taller-de-bicis-park-tool.yml
+++ b/data/cities/cochabamba/taller-de-bicis-park-tool.yml
@@ -1,10 +1,10 @@
-id: 8620183324
+id: 9009464606
 type: node
-latitude: -17.39875
-longitude: -66.13905
+latitude: -17.37462
+longitude: -66.12129
 postcode: ""
 city: Cochabamba
-street: "Avenida 9 de Abril"
+street: "Calle Pedro Alvarez"
 housenumber: 
 phone: ""
 opening_hours: ""
