--- a/data/cities/santa-cruz-de-la-sierra/precision-eyewear-calle-ballivian.yml
+++ b/data/cities/santa-cruz-de-la-sierra/precision-eyewear-calle-ballivian.yml
@@ -1,10 +1,10 @@
-id: 4377609034
+id: 4400008515
 type: node
-latitude: -17.78172
-longitude: -63.18229
+latitude: -17.78458
+longitude: -63.17941
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Calle Florida"
+street: "Calle Ballivián"
 housenumber: 
 phone: ""
 opening_hours: ""
