update content and data

--- a/data/cities/ciudad-satelite/peluqueria-avenida-del-policia.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-del-policia.yml
@@ -1,11 +1,11 @@
-id: 9362453550
+id: 7571743147
 type: node
-latitude: -16.5276
-longitude: -68.14851
+latitude: -16.52551
+longitude: -68.15371
 postcode: ""
 city: Ciudad Satélite
 street: "Avenida del Policía"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-17:00"
 website: ""
