--- a/data/cities/ciudad-satelite/tienda-de-variedades.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades.yml
@@ -1,10 +1,10 @@
-id: 4589730254
+id: 4553114026
 type: node
-latitude: -16.5238
-longitude: -68.15165
+latitude: -16.52351
+longitude: -68.14981
 postcode: ""
 city: Ciudad Satélite
-street: "Avenida Satélite"
+street: "Calle Hermano E. Morales"
 housenumber: 
 phone: ""
 opening_hours: ""
