--- a/data/cities/cochabamba/baupercar-2.yml
+++ b/data/cities/cochabamba/baupercar-2.yml
@@ -1,10 +1,10 @@
-id: 3552731012
+id: 3636046995
 type: node
-latitude: -17.38575
-longitude: -66.18562
+latitude: -17.39811
+longitude: -66.15435
 postcode: ""
 city: Cochabamba
-street: "Avenida d'Orbigny"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
