--- a/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-escalona-y-aguero.yml
@@ -1,10 +1,10 @@
-id: 7571666792
+id: 7618663236
 type: node
-latitude: -16.52153
-longitude: -68.15054
+latitude: -16.53028
+longitude: -68.15924
 postcode: ""
 city: Ciudad Satélite
-street: "Calle Mallco Mayta"
+street: "Avenida Escalona y Aguero"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 09:00-18:00"
