--- a/data/cities/ciudad-satelite/tienda-de-variedades-avenida-ciudad-satelite-3.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-avenida-ciudad-satelite-3.yml
@@ -1,11 +1,11 @@
-id: 7495698708
+id: 7495667354
 type: node
-latitude: -16.52205
-longitude: -68.156
+latitude: -16.52164
+longitude: -68.15705
 postcode: ""
 city: Ciudad Satélite
 street: "Avenida Ciudad Satélite"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Sa 09:00-18:00"
+opening_hours: ""
 website: ""
