--- a/data/cities/santa-cruz-de-la-sierra/wow-avenida-roca-y-coronado.yml
+++ b/data/cities/santa-cruz-de-la-sierra/wow-avenida-roca-y-coronado.yml
@@ -1,7 +1,7 @@
-id: 11221071389
-type: node
-latitude: -17.78523
-longitude: -63.20903
+id: 441302316
+type: way
+latitude: -17.78568
+longitude: -63.20416
 postcode: ""
 city: Santa Cruz de la Sierra
 street: "Avenida Roca y Coronado"
