--- a/data/cities/ciudad-satelite/tienda-de-regalos-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-regalos-2.yml
@@ -1,10 +1,10 @@
-id: 7463799150
+id: 8309579649
 type: node
-latitude: -16.52533
-longitude: -68.15207
+latitude: -16.52477
+longitude: -68.15092
 postcode: ""
 city: Ciudad Satélite
-street: "Arturo Ballivian Otero"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
