--- a/data/cities/ciudad-satelite/tienda-de-regalos.yml
+++ b/data/cities/ciudad-satelite/tienda-de-regalos.yml
@@ -1,11 +1,11 @@
-id: 8309579649
+id: 8013474587
 type: node
-latitude: -16.52477
-longitude: -68.15092
+latitude: -16.52226
+longitude: -68.15258
 postcode: ""
 city: Ciudad Satélite
-street: ""
-housenumber: 
+street: "Calle Nuñez del Prado"
+housenumber: 1227
 phone: ""
 opening_hours: ""
 website: ""
