update content and data

--- a/data/cities/ciudad-satelite/tienda-de-variedades-avenida-del-policia-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-avenida-del-policia-2.yml
@@ -1,11 +1,11 @@
-id: 7474524316
+id: 7464674760
 type: node
-latitude: -16.52448
-longitude: -68.15628
+latitude: -16.52701
+longitude: -68.15
 postcode: ""
 city: Ciudad Satélite
 street: "Avenida del Policía"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-18:00"
 website: ""
