--- a/data/cities/ciudad-satelite/tienda-de-variedades-avenida-del-policia.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-avenida-del-policia.yml
@@ -1,11 +1,11 @@
-id: 7499255940
+id: 7474524316
 type: node
-latitude: -16.52543
-longitude: -68.15392
+latitude: -16.52448
+longitude: -68.15628
 postcode: ""
 city: Ciudad Satélite
 street: "Avenida del Policía"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Fr 09:00-17:00"
+opening_hours: ""
 website: ""
