--- a/data/cities/cochabamba/urkupina-avenida-simon-lopez.yml
+++ b/data/cities/cochabamba/urkupina-avenida-simon-lopez.yml
@@ -1,11 +1,11 @@
 id: 5859539171
 type: node
-latitude: -17.36278
-longitude: -66.18113
+latitude: -17.3627
+longitude: -66.18124
 postcode: ""
 city: Cochabamba
 street: "Avenida Simón Lopez"
-housenumber: 1461
+housenumber: 1485
 phone: "+59176931802"
 opening_hours: "Mo-Fr 08:30-16:30; Sa 08:30-13:30"
-website: "https://fb.me/Urkupinia.SRL"
+website: "https://fb.me/Urkupina.sl"
