update content and data

--- a/data/cities/la-enconada/tienda-r-t.yml
+++ b/data/cities/la-enconada/tienda-r-t.yml
@@ -1,9 +1,9 @@
-id: 2813547889
+id: 11704793769
 type: node
-latitude: -21.40302
-longitude: -67.59652
+latitude: -17.04693
+longitude: -63.89372
 postcode: ""
-city: Alota
+city: La Enconada
 street: ""
 housenumber: 
 phone: ""
