--- a/data/cities/ciudad-satelite/tienda-de-barrio.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio.yml
@@ -1,10 +1,10 @@
-id: 4564028103
+id: 4548572051
 type: node
-latitude: -16.51944
-longitude: -68.15124
+latitude: -16.52596
+longitude: -68.15064
 postcode: ""
 city: Ciudad Satélite
-street: "Calle Nuñez del Prado"
+street: "Calle Hno. E. Morales"
 housenumber: 
 phone: ""
 opening_hours: ""
