update content and data

--- a/data/cities/ciudad-satelite/libreria-bazar-calle-25-b.yml
+++ b/data/cities/ciudad-satelite/libreria-bazar-calle-25-b.yml
@@ -1,10 +1,10 @@
-id: 7519251140
+id: 7575530305
 type: node
-latitude: -16.52734
-longitude: -68.15551
+latitude: -16.52632
+longitude: -68.15394
 postcode: ""
 city: Ciudad Satélite
-street: "Calle Diego de Portugal"
+street: "Calle 25-B"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 09:00-18:00"
