--- a/data/cities/la-paz/su-tienda-amiga-sarita.yml
+++ b/data/cities/la-paz/su-tienda-amiga-sarita.yml
@@ -1,11 +1,11 @@
-id: 6514193987
+id: 5667438761
 type: node
-latitude: -16.50713
-longitude: -68.13287
+latitude: -16.50794
+longitude: -68.13253
 postcode: ""
 city: La Paz
 street: "Calle Abdón Saavedra"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Su 10:00-22:00"
 website: ""
