--- a/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-roca-y-coronado-2.yml
+++ b/data/cities/santa-cruz-de-la-sierra/boleteria-avenida-roca-y-coronado-2.yml
@@ -1,10 +1,10 @@
-id: 4392641808
+id: 11221071389
 type: node
-latitude: -17.78296
-longitude: -63.18394
+latitude: -17.78523
+longitude: -63.20903
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Junín"
+street: "Avenida Roca y Coronado"
 housenumber: 
 phone: ""
 opening_hours: ""
