--- a/data/cities/santa-cruz-de-la-sierra/opti-corp-calle-21-de-mayo.yml
+++ b/data/cities/santa-cruz-de-la-sierra/opti-corp-calle-21-de-mayo.yml
@@ -1,10 +1,10 @@
-id: 11221659067
+id: 4394915415
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.78233
+longitude: -63.18377
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Avenida José Banegas"
+street: "Calle 21 de Mayo"
 housenumber: 
 phone: ""
 opening_hours: ""
