update content and data

--- a/data/cities/santa-cruz-de-la-sierra/lupo-calle-florida.yml
+++ b/data/cities/santa-cruz-de-la-sierra/lupo-calle-florida.yml
@@ -1,10 +1,10 @@
-id: 4394915415
+id: 4377609034
 type: node
-latitude: -17.78233
-longitude: -63.18377
+latitude: -17.78172
+longitude: -63.18229
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Calle 21 de Mayo"
+street: "Calle Florida"
 housenumber: 
 phone: ""
 opening_hours: ""
