--- a/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
+++ b/data/cities/ciudad-satelite/venta-de-ropa-avenida-satelite.yml
@@ -1,10 +1,10 @@
-id: 9764723495
+id: 4400066933
 type: node
-latitude: -16.52418
-longitude: -68.15674
+latitude: -16.52461
+longitude: -68.14964
 postcode: ""
 city: Ciudad Satélite
-street: "Avenida Escalona y Aguero"
+street: "Avenida Satélite"
 housenumber: 
 phone: ""
 opening_hours: ""
