update content and data

--- a/data/cities/santa-cruz-de-la-sierra/santa-barbara.yml
+++ b/data/cities/santa-cruz-de-la-sierra/santa-barbara.yml
@@ -4,7 +4,7 @@ latitude: -17.78193
 longitude: -63.18592
 postcode: ""
 city: Santa Cruz de la Sierra
-street: "Santa Bárbara"
+street: "Calle Santa Bárbara"
 housenumber: 
 phone: ""
 opening_hours: ""
