update content and data

--- a/data/cities/ciudad-satelite/ag-importaciones.yml
+++ b/data/cities/ciudad-satelite/ag-importaciones.yml
@@ -5,7 +5,7 @@ longitude: -68.15392
 postcode: ""
 city: Ciudad Satélite
 street: "Avenida del Policía"
-housenumber: 
+housenumber: 645
 phone: ""
-opening_hours: "Mo-Fr 09:00-17:00"
+opening_hours: ""
 website: ""
