--- a/data/cities/cochabamba/boleteria-1.yml
+++ b/data/cities/cochabamba/boleteria-1.yml
@@ -1,11 +1,11 @@
 id: 192581537
 type: way
-latitude: -17.41816
+latitude: -17.41818
 longitude: -66.12938
 postcode: ""
 city: Cochabamba
-street: ""
+street: "Avenida Circuito Bolivia"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 16:00+;Sa-Su,PH 11:00+"
 website: ""
