--- a/data/cities/cochabamba/boleteria-2-avenida-circuito-bolivia.yml
+++ b/data/cities/cochabamba/boleteria-2-avenida-circuito-bolivia.yml
@@ -4,8 +4,8 @@ latitude: -17.4182
 longitude: -66.12982
 postcode: ""
 city: Cochabamba
-street: ""
+street: "Avenida Circuito Bolivia"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 16:00+;Sa-Su,PH 11:00+"
 website: ""
