--- a/data/cities/cochabamba/boutique-nicole.yml
+++ b/data/cities/cochabamba/boutique-nicole.yml
@@ -5,7 +5,7 @@ longitude: -66.16091
 postcode: ""
 city: Cochabamba
 street: "Avenida Ayacucho"
-housenumber: 
+housenumber: 0893
 phone: ""
 opening_hours: ""
 website: ""
