update content and data

--- a/data/cities/cochabamba/almacen-pasteur.yml
+++ b/data/cities/cochabamba/almacen-pasteur.yml
@@ -4,8 +4,8 @@ latitude: -17.39093
 longitude: -66.14898
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 0120-S
-phone: ""
+phone: "+591 4 4542834"
 opening_hours: "Mo-Su 07:00-22:00"
 website: ""
