--- a/data/cities/cochabamba/barberia-style.yml
+++ b/data/cities/cochabamba/barberia-style.yml
@@ -1,10 +1,10 @@
-id: 4941282090
+id: 11892386577
 type: node
-latitude: -17.39093
-longitude: -66.15045
+latitude: -17.41446
+longitude: -66.15552
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Independencia"
 housenumber: 
 phone: ""
 opening_hours: ""
