--- a/data/cities/cochabamba/copacabana.yml
+++ b/data/cities/cochabamba/copacabana.yml
@@ -1,11 +1,11 @@
-id: 4433660426
+id: 4941282090
 type: node
-latitude: -17.39472
-longitude: -66.15739
+latitude: -17.39093
+longitude: -66.15045
 postcode: ""
 city: Cochabamba
-street: "Calle Nataniel Aguirre"
-housenumber: 0320
+street: "Avenida Heroínas"
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
