--- a/data/cities/cochabamba/panaderia-zahina.yml
+++ b/data/cities/cochabamba/panaderia-zahina.yml
@@ -1,11 +1,11 @@
-id: 1873958874
+id: 10607522662
 type: node
-latitude: -17.39052
-longitude: -66.14833
+latitude: -17.37284
+longitude: -66.15417
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida América"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "+591 79969623"
+opening_hours: "Mo-Fr 07:00-19:30; Sa 07:00-16:30; Su 07:00-14:00"
 website: ""
