--- a/data/cities/cochabamba/uni-optica.yml
+++ b/data/cities/cochabamba/uni-optica.yml
@@ -4,8 +4,8 @@ latitude: -17.39185
 longitude: -66.15535
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 
-phone: ""
-opening_hours: ""
+phone: "+591 4 4540511"
+opening_hours: "Mo-Fr 08:00-20:00;Sa 08:00-18:00;Su Off"
 website: ""
