--- a/data/cities/el-alto/tienda-dona-luisa.yml
+++ b/data/cities/el-alto/tienda-dona-luisa.yml
@@ -4,7 +4,7 @@ latitude: -16.56327
 longitude: -68.22393
 postcode: ""
 city: El Alto
-street: "Entre la Calle María Josefa Mujía y Calle Alto de Alianza"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: "06:00-23:00"
