--- a/data/cities/el-alto/tienda-dona-porfidia.yml
+++ b/data/cities/el-alto/tienda-dona-porfidia.yml
@@ -4,7 +4,7 @@ latitude: -16.56294
 longitude: -68.22416
 postcode: ""
 city: El Alto
-street: "Entre Calle Topater y Calle Alto de la Alianza"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: "Mo-Su 06:00-22:00"
