--- a/data/cities/cochabamba/ferreteria-nacional.yml
+++ b/data/cities/cochabamba/ferreteria-nacional.yml
@@ -4,7 +4,7 @@ latitude: -17.39116
 longitude: -66.15159
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 
 phone: ""
 opening_hours: ""
