--- a/data/cities/cochabamba/papeleria-paris.yml
+++ b/data/cities/cochabamba/papeleria-paris.yml
@@ -4,7 +4,7 @@ latitude: -17.39229
 longitude: -66.15785
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 
 phone: ""
 opening_hours: ""
