--- a/data/cities/cochabamba/super-haas.yml
+++ b/data/cities/cochabamba/super-haas.yml
@@ -4,7 +4,7 @@ latitude: -17.39152
 longitude: -66.15355
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 585
 phone: "+591 69437196"
 opening_hours: "Mo-Sa 08:00-21:00, Su 09:00-13:00"
