update content and data

--- a/data/cities/cochabamba/venta-urea.yml
+++ b/data/cities/cochabamba/venta-urea.yml
@@ -1,10 +1,10 @@
-id: 3636046995
+id: 11898090515
 type: node
-latitude: -17.39811
-longitude: -66.15435
+latitude: -17.44957
+longitude: -66.13075
 postcode: ""
 city: Cochabamba
-street: ""
+street: "Avenida Petrolera"
 housenumber: 
 phone: ""
 opening_hours: ""
