update content and data

--- a/data/cities/cochabamba/tienda-elenita.yml
+++ b/data/cities/cochabamba/tienda-elenita.yml
@@ -1,10 +1,10 @@
-id: 8597535066
+id: 11911412612
 type: node
-latitude: -17.39153
-longitude: -66.15798
+latitude: -17.38134
+longitude: -66.15357
 postcode: ""
 city: Cochabamba
-street: "Calle Mariano Baptista"
+street: "Avenida Ramón Rivero"
 housenumber: 
 phone: ""
 opening_hours: ""
