--- a/data/cities/sacaba/hipermaxi.yml
+++ b/data/cities/sacaba/hipermaxi.yml
@@ -8,4 +8,4 @@ street: "Avenida Eliodoro Villazón"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Su 07:00-22:00"
-website: ""
+website: "https://hipermaxi.com/"
