--- a/data/cities/cochabamba/asociacion-de-productores-artesanales-y-medicina-tradicional-sartawi-andino.yml
+++ b/data/cities/cochabamba/asociacion-de-productores-artesanales-y-medicina-tradicional-sartawi-andino.yml
@@ -1,10 +1,10 @@
-id: 5562273308
+id: 8090151704
 type: node
-latitude: -17.37705
-longitude: -66.14516
+latitude: -17.40049
+longitude: -66.14236
 postcode: ""
 city: Cochabamba
-street: "Parque del Arquitecto"
+street: "Avenida Circuito Bolivia"
 housenumber: 
 phone: ""
 opening_hours: ""
