--- a/data/cities/cochabamba/asociacion-inca-chaca.yml
+++ b/data/cities/cochabamba/asociacion-inca-chaca.yml
@@ -1,10 +1,10 @@
-id: 5562273308
+id: 8090151703
 type: node
-latitude: -17.37705
-longitude: -66.14516
+latitude: -17.40052
+longitude: -66.14253
 postcode: ""
 city: Cochabamba
-street: "Parque del Arquitecto"
+street: "Avenida Circuito Bolivia"
 housenumber: 
 phone: ""
 opening_hours: ""
