--- a/data/cities/cochabamba/bodega-pil-avenida-ayacucho.yml
+++ b/data/cities/cochabamba/bodega-pil-avenida-ayacucho.yml
@@ -1,10 +1,10 @@
-id: 5562273308
+id: 11917330456
 type: node
-latitude: -17.37705
-longitude: -66.14516
+latitude: -17.38584
+longitude: -66.16
 postcode: ""
 city: Cochabamba
-street: "Parque del Arquitecto"
+street: "Avenida Ayacucho"
 housenumber: 
 phone: ""
 opening_hours: ""
