--- a/data/cities/cochabamba/hipermaxi-avenida-circunvalacion-beijing.yml
+++ b/data/cities/cochabamba/hipermaxi-avenida-circunvalacion-beijing.yml
@@ -8,4 +8,4 @@ street: "Avenida Circunvalación Beijing"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://hipermaxi.com/"
