--- a/data/cities/cochabamba/hipermaxi-avenida-jose-ballivian.yml
+++ b/data/cities/cochabamba/hipermaxi-avenida-jose-ballivian.yml
@@ -8,4 +8,4 @@ street: "Avenida José Ballivián"
 housenumber: 753
 phone: ""
 opening_hours: "Mo-Su 07:00-22:00"
-website: ""
+website: "https://hipermaxi.com/"
