update content and data

--- a/data/cities/cochabamba/plaza-10-avenida-ayacucho.yml
+++ b/data/cities/cochabamba/plaza-10-avenida-ayacucho.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: "Avenida Ayacucho"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Fr 08:30-20:00, Sa 08:30-13:30"
+opening_hours: "Mo-Fr 08:30-20:00; Sa 08:30-13:30"
 website: ""
