--- a/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
+++ b/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
@@ -1,10 +1,10 @@
-id: 3552731012
+id: 8597535066
 type: node
-latitude: -17.38575
-longitude: -66.18562
+latitude: -17.39153
+longitude: -66.15798
 postcode: ""
 city: Cochabamba
-street: "Avenida d'Orbigny"
+street: "Calle Mariano Baptista"
 housenumber: 
 phone: ""
 opening_hours: ""
