--- a/data/cities/cochabamba/eden.yml
+++ b/data/cities/cochabamba/eden.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: "Avenida Salamanca"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Sa 09:00-01:00, 14:30-20:30"
 website: ""
