update content and data

--- a/data/cities/cochabamba/boleteria-parque-de-la-integracion.yml
+++ b/data/cities/cochabamba/boleteria-parque-de-la-integracion.yml
@@ -1,11 +1,11 @@
 id: 11204110422
 type: node
 latitude: -17.45283
-longitude: -66.14795
+longitude: -66.14796
 postcode: ""
 city: Cochabamba
 street: "Avenida Inca Camacho"
 housenumber: 
 phone: ""
-opening_hours: ""
+opening_hours: "Tu-Su 09:00-19:00;Mo Off"
 website: ""
