--- a/data/cities/santa-cruz-de-la-sierra/inalclar.yml
+++ b/data/cities/santa-cruz-de-la-sierra/inalclar.yml
@@ -8,4 +8,4 @@ street: "Avenida Cristo Redentor Km 8 al norte"
 housenumber: 
 phone: "+590 3316772"
 opening_hours: "Mo-Fr 08:00-17:00"
-website: "www.inalclar.com"
+website: "https://www.inalclar.com/"
