--- a/data/cities/cochabamba/ajayu.yml
+++ b/data/cities/cochabamba/ajayu.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: "Rotonda Cristo Rey"
 housenumber: 
 phone: "+591 60708076"
-opening_hours: "Mo-Fr 09:00-12:30,14:30-19:00; Sa 09:00-12:30"
+opening_hours: "Mo-Fr 09:30-13:00,15:00-19:00; Sa 09:30-13:00; Su Off"
 website: ""
