update content and data

--- a/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
+++ b/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
@@ -1,10 +1,10 @@
-id: 3933397673
+id: 8597535066
 type: node
-latitude: -17.37741
-longitude: -66.15688
+latitude: -17.39153
+longitude: -66.15798
 postcode: ""
 city: Cochabamba
-street: "Avenida Santa Cruz"
+street: "Calle Mariano Baptista"
 housenumber: 
 phone: ""
 opening_hours: ""
