--- a/data/cities/tarija/proveedora-ely.yml
+++ b/data/cities/tarija/proveedora-ely.yml
@@ -8,4 +8,4 @@ street: "Avenida Froilan Tejerina"
 housenumber: 467
 phone: "+591 69312321"
 opening_hours: "Mo-Su 06:00-22:30"
-website: "http://www.supercampesino.com"
+website: "https://www.supercampesino.com/"
