update content and data

--- a/data/cities/cochabamba/super-haas.yml
+++ b/data/cities/cochabamba/super-haas.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: "Avenida Heroínas de la Coronilla"
 housenumber: 585
-phone: "+591 69437196"
+phone: "+591 4 4234233;+591 69437196"
 opening_hours: "Mo-Sa 08:00-21:00, Su 09:00-13:00"
 website: ""
