--- a/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
+++ b/data/cities/cochabamba/libreria-calle-mariano-baptista.yml
@@ -1,10 +1,10 @@
-id: 4318911215
+id: 8597535066
 type: node
-latitude: -17.39316
-longitude: -66.17403
+latitude: -17.39153
+longitude: -66.15798
 postcode: ""
 city: Cochabamba
-street: "Calle Francisco Pizarro"
+street: "Calle Mariano Baptista"
 housenumber: 
 phone: ""
 opening_hours: ""
