update content and data

--- a/data/cities/cochabamba/pedidosya-market.yml
+++ b/data/cities/cochabamba/pedidosya-market.yml
@@ -4,7 +4,7 @@ latitude: -17.37486
 longitude: -66.15447
 postcode: ""
 city: Cochabamba
-street: "Calle Potosí"
+street: "Avenida Potosí"
 housenumber: 
 phone: ""
 opening_hours: ""
