--- a/data/cities/cochabamba/tienda-copacabana-avenida-portales.yml
+++ b/data/cities/cochabamba/tienda-copacabana-avenida-portales.yml
@@ -1,7 +1,7 @@
-id: 985675884
-type: way
-latitude: -17.37469
-longitude: -66.15535
+id: 4557891465
+type: node
+latitude: -17.37498
+longitude: -66.15543
 postcode: ""
 city: Cochabamba
 street: "Avenida Portales"
