--- a/data/cities/cochabamba/tatoo-calle-jose-de-la-reza.yml
+++ b/data/cities/cochabamba/tatoo-calle-jose-de-la-reza.yml
@@ -1,10 +1,10 @@
-id: 2384907350
+id: 10845001141
 type: node
-latitude: -17.37719
-longitude: -66.15317
+latitude: -17.38723
+longitude: -66.15859
 postcode: ""
 city: Cochabamba
-street: "Calle Beni"
+street: "Calle José de la Reza"
 housenumber: 
 phone: ""
 opening_hours: ""
