--- a/data/cities/cochabamba/tatoo.yml
+++ b/data/cities/cochabamba/tatoo.yml
@@ -1,10 +1,10 @@
-id: 10845001141
+id: 4603068470
 type: node
-latitude: -17.38723
-longitude: -66.15859
+latitude: -17.3772
+longitude: -66.15307
 postcode: ""
 city: Cochabamba
-street: "Calle José de la Reza"
+street: "Pasaje Portales"
 housenumber: 
 phone: ""
 opening_hours: ""
