update content and data

--- a/data/cities/cochabamba/auto-line-accesorios-y-servicios.yml
+++ b/data/cities/cochabamba/auto-line-accesorios-y-servicios.yml
@@ -1,11 +1,11 @@
-id: 11048939270
+id: 12084479134
 type: node
-latitude: -17.37751
-longitude: -66.18074
+latitude: -17.37748
+longitude: -66.18139
 postcode: ""
 city: Cochabamba
 street: "Avenida Beijing"
 housenumber: 
-phone: ""
+phone: "+591-77722028"
 opening_hours: ""
 website: ""
