--- a/data/cities/cochabamba/baby-toy.yml
+++ b/data/cities/cochabamba/baby-toy.yml
@@ -1,10 +1,10 @@
-id: 3552731012
+id: 5319275328
 type: node
-latitude: -17.38575
-longitude: -66.18562
+latitude: -17.3858
+longitude: -66.15926
 postcode: ""
 city: Cochabamba
-street: "Avenida d'Orbigny"
+street: "Calle La Paz"
 housenumber: 
 phone: ""
 opening_hours: ""
