--- a/data/cities/cochabamba/el-ceibo.yml
+++ b/data/cities/cochabamba/el-ceibo.yml
@@ -4,7 +4,7 @@ latitude: -17.3923
 longitude: -66.15789
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 111
 phone: "+591 72026482;+591 72026483"
 opening_hours: "Mo-Fr 09:00-18:00; Sa 08:30-13:00"
