--- a/data/cities/cochabamba/copacabana.yml
+++ b/data/cities/cochabamba/copacabana.yml
@@ -4,7 +4,7 @@ latitude: -17.39093
 longitude: -66.15045
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 
 phone: ""
 opening_hours: ""
