--- a/data/cities/cochabamba/libreria-papeleria-sien.yml
+++ b/data/cities/cochabamba/libreria-papeleria-sien.yml
@@ -4,7 +4,7 @@ latitude: -17.39227
 longitude: -66.15773
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 
 phone: ""
 opening_hours: ""
