--- a/data/cities/cochabamba/tentacion.yml
+++ b/data/cities/cochabamba/tentacion.yml
@@ -4,7 +4,7 @@ latitude: -17.39063
 longitude: -66.14883
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 
 phone: ""
 opening_hours: ""
