--- a/data/cities/cochabamba/tienda-tilsit.yml
+++ b/data/cities/cochabamba/tienda-tilsit.yml
@@ -4,7 +4,7 @@ latitude: -17.39062
 longitude: -66.14877
 postcode: ""
 city: Cochabamba
-street: "Avenida Heroínas"
+street: "Avenida Heroínas de la Coronilla"
 housenumber: 
 phone: "+591 76503522"
 opening_hours: "Mo-Fr 09:30-19:30; Sa 09:30-13:00"
