update content and data

--- a/data/cities/cochabamba/regalos-avenida-america.yml
+++ b/data/cities/cochabamba/regalos-avenida-america.yml
@@ -1,10 +1,10 @@
-id: 8620183324
+id: 12096329280
 type: node
-latitude: -17.39875
-longitude: -66.13905
+latitude: -17.374
+longitude: -66.1412
 postcode: ""
 city: Cochabamba
-street: "Avenida 9 de Abril"
+street: "Avenida América"
 housenumber: 
 phone: ""
 opening_hours: ""
