--- a/data/cities/cochabamba/baupercar-avenida-dorbigny.yml
+++ b/data/cities/cochabamba/baupercar-avenida-dorbigny.yml
@@ -1,10 +1,10 @@
-id: 8620183324
+id: 3552731012
 type: node
-latitude: -17.39875
-longitude: -66.13905
+latitude: -17.38575
+longitude: -66.18562
 postcode: ""
 city: Cochabamba
-street: "Avenida 9 de Abril"
+street: "Avenida d'Orbigny"
 housenumber: 
 phone: ""
 opening_hours: ""
