--- a/data/cities/cochabamba/comercial-magui.yml
+++ b/data/cities/cochabamba/comercial-magui.yml
@@ -1,10 +1,10 @@
-id: 8620183324
+id: 12096329272
 type: node
-latitude: -17.39875
-longitude: -66.13905
+latitude: -17.37395
+longitude: -66.14179
 postcode: ""
 city: Cochabamba
-street: "Avenida 9 de Abril"
+street: "Avenida América"
 housenumber: 
 phone: ""
 opening_hours: ""
