--- a/data/cities/cochabamba/frial-tupuraya.yml
+++ b/data/cities/cochabamba/frial-tupuraya.yml
@@ -1,10 +1,10 @@
-id: 8620183324
+id: 12096329274
 type: node
-latitude: -17.39875
-longitude: -66.13905
+latitude: -17.37397
+longitude: -66.1415
 postcode: ""
 city: Cochabamba
-street: "Avenida 9 de Abril"
+street: "Avenida América"
 housenumber: 
 phone: ""
 opening_hours: ""
