--- a/data/cities/cochabamba/libreria-britanica.yml
+++ b/data/cities/cochabamba/libreria-britanica.yml
@@ -1,10 +1,10 @@
 id: 5341196461
 type: node
 latitude: -17.37394
-longitude: -66.14221
+longitude: -66.14218
 postcode: ""
 city: Cochabamba
-street: ""
+street: "Avenida América"
 housenumber: 
 phone: ""
 opening_hours: ""
