--- a/data/cities/cochabamba/libreria-y-fotocopiadora-catolica.yml
+++ b/data/cities/cochabamba/libreria-y-fotocopiadora-catolica.yml
@@ -1,10 +1,10 @@
-id: 8597535066
+id: 12096329266
 type: node
-latitude: -17.39153
-longitude: -66.15798
+latitude: -17.37394
+longitude: -66.14215
 postcode: ""
 city: Cochabamba
-street: "Calle Mariano Baptista"
+street: "Avenida América"
 housenumber: 
 phone: ""
 opening_hours: ""
