--- a/data/cities/cochabamba/punto-y-coma-sin-gluten.yml
+++ b/data/cities/cochabamba/punto-y-coma-sin-gluten.yml
@@ -1,11 +1,11 @@
 id: 5341195617
 type: node
 latitude: -17.37401
-longitude: -66.14142
+longitude: -66.14139
 postcode: ""
 city: Cochabamba
 street: "Avenida América"
 housenumber: 1512
 phone: "+591 65344580"
-opening_hours: "Mo-Fr 12:00-19:00; Sa 10:30-12:00"
+opening_hours: "Lu-Sa 10:30-20:00"
 website: ""
