--- a/data/cities/cochabamba/tienda-el-baratillo.yml
+++ b/data/cities/cochabamba/tienda-el-baratillo.yml
@@ -1,10 +1,10 @@
-id: 3636046995
+id: 8584400941
 type: node
-latitude: -17.39811
-longitude: -66.15435
+latitude: -17.39137
+longitude: -66.14003
 postcode: ""
 city: Cochabamba
-street: ""
+street: "Avenida Guillermo Urquidi"
 housenumber: 
 phone: ""
 opening_hours: ""
