--- a/data/cities/la-paz/chocolates-condor.yml
+++ b/data/cities/la-paz/chocolates-condor.yml
@@ -7,5 +7,5 @@ city: La Paz
 street: "Calle Genaro Sanjinés"
 housenumber: 343
 phone: "+591 2 2408844"
-opening_hours: ""
+opening_hours: "Mo-Fr 09:00-19:30,00:30-15:00; Sa 10:00-13:00"
 website: ""
