update content and data

--- a/data/cities/cochabamba/bata-avenida-general-jose-manuel-pando.yml
+++ b/data/cities/cochabamba/bata-avenida-general-jose-manuel-pando.yml
@@ -4,7 +4,7 @@ latitude: -17.37608
 longitude: -66.15104
 postcode: ""
 city: Cochabamba
-street: "Avenida Pando"
+street: "Avenida General José Manuel Pando"
 housenumber: 
 phone: ""
 opening_hours: ""
