--- a/data/cities/cochabamba/petkorp.yml
+++ b/data/cities/cochabamba/petkorp.yml
@@ -1,11 +1,11 @@
 id: 10747667387
 type: node
-latitude: -17.38702
-longitude: -66.15097
+latitude: -17.38707
+longitude: -66.15096
 postcode: ""
 city: Cochabamba
 street: "Avenida Oquendo"
 housenumber: 
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+591 78343020"
+opening_hours: "Mo-Sa 10:00-20:00; Su 10:00-15:00; PH Off"
+website: "https://petkorp.com/"
