--- a/data/cities/la-paz/plurar-editores.yml
+++ b/data/cities/la-paz/plurar-editores.yml
@@ -1,11 +1,11 @@
 id: 5256946921
 type: node
-latitude: -16.51055
-longitude: -68.12908
+latitude: -16.51057
+longitude: -68.12904
 postcode: ""
 city: La Paz
-street: "Calle Rosendo Gutierrez"
+street: "Avenida Ecuador"
 housenumber: 596
-phone: ""
+phone: "+591 2 2411018"
 opening_hours: "Mo-Fr 09:00-19:30"
 website: ""
