--- a/data/cities/cochabamba/boleteria-parque-kanata.yml
+++ b/data/cities/cochabamba/boleteria-parque-kanata.yml
@@ -1,10 +1,10 @@
-id: 8620183324
+id: 12100035075
 type: node
-latitude: -17.39875
-longitude: -66.13905
+latitude: -17.41286
+longitude: -66.15863
 postcode: ""
 city: Cochabamba
-street: "Avenida 9 de Abril"
+street: "Avenida 6 de Agosto"
 housenumber: 
 phone: ""
 opening_hours: ""
