--- a/data/cities/ciudad-satelite/peluqueria-avenida-del-policia-2.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-del-policia-2.yml
@@ -1,11 +1,11 @@
-id: 7571743147
+id: 9362453550
 type: node
-latitude: -16.52551
-longitude: -68.15371
+latitude: -16.5276
+longitude: -68.14851
 postcode: ""
 city: Ciudad Satélite
 street: "Avenida del Policía"
 housenumber: 
 phone: ""
-opening_hours: "Mo-Fr 09:00-17:00"
+opening_hours: ""
 website: ""
