update content and data

--- a/data/cities/cochabamba/el-rinconcito-cultural.yml
+++ b/data/cities/cochabamba/el-rinconcito-cultural.yml
@@ -7,5 +7,5 @@ city: Cochabamba
 street: "Avenida Humberto Asín Rivero"
 housenumber: 4833
 phone: ""
-opening_hours: "Mo-Fr 08:00-19:00"
+opening_hours: "Mo-Fr 07:00-19:00; Sa 07:30-13:00"
 website: ""
