--- a/data/cities/cochabamba/dona-marina.yml
+++ b/data/cities/cochabamba/dona-marina.yml
@@ -1,10 +1,10 @@
-id: 8620183324
+id: 12133204004
 type: node
-latitude: -17.39875
-longitude: -66.13905
+latitude: -17.44752
+longitude: -66.1462
 postcode: ""
 city: Cochabamba
-street: "Avenida 9 de Abril"
+street: "Calle Río Yata"
 housenumber: 
 phone: ""
 opening_hours: ""
