update content and data

--- a/data/cities/alpacoma/tienda-de-variedades.yml
+++ b/data/cities/alpacoma/tienda-de-variedades.yml
@@ -1,10 +1,10 @@
-id: 7566671684
+id: 7600561400
 type: node
-latitude: -16.53337
-longitude: -68.14965
+latitude: -16.53409
+longitude: -68.15068
 postcode: ""
 city: Alpacoma
-street: "Avenida Diego de Ocana"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 09:00-18:00"
