--- a/data/cities/ciudad-satelite/tienda-de-barrio-calle-nunez-del-prado.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-calle-nunez-del-prado.yml
@@ -1,10 +1,10 @@
-id: 7463799150
+id: 4564028103
 type: node
-latitude: -16.52533
-longitude: -68.15207
+latitude: -16.51944
+longitude: -68.15124
 postcode: ""
 city: Ciudad Satélite
-street: "Arturo Ballivian Otero"
+street: "Calle Nuñez del Prado"
 housenumber: 
 phone: ""
 opening_hours: ""
