--- a/data/cities/alpacoma/tienda-de-variedades-avenida-diego-de-ocana-3.yml
+++ b/data/cities/alpacoma/tienda-de-variedades-avenida-diego-de-ocana-3.yml
@@ -1,10 +1,10 @@
-id: 7600561400
+id: 7794719756
 type: node
-latitude: -16.53409
-longitude: -68.15068
+latitude: -16.53483
+longitude: -68.1492
 postcode: ""
 city: Alpacoma
-street: ""
+street: "Avenida Diego de Ocana"
 housenumber: 
 phone: ""
 opening_hours: "Mo-Sa 09:00-18:00"
