--- a/data/cities/santa-cruz-de-la-sierra/crown.yml
+++ b/data/cities/santa-cruz-de-la-sierra/crown.yml
@@ -1,10 +1,10 @@
-id: 441302316
+id: 12209533764
 type: node
-latitude: -17.78568
-longitude: -63.20416
+latitude: -17.76473
+longitude: -63.18153
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida Roca y Coronado
+street: Avenida Cristo Redentor
 housenumber: ""
 phone: ""
 opening_hours: ""
