--- a/data/cities/santa-cruz-de-la-sierra/daniela-antelo.yml
+++ b/data/cities/santa-cruz-de-la-sierra/daniela-antelo.yml
@@ -1,10 +1,10 @@
-id: 441302316
+id: 4386483618
 type: node
-latitude: -17.78568
-longitude: -63.20416
+latitude: -17.79302
+longitude: -63.16882
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida Roca y Coronado
+street: Calle Capitán Mariano Arrién
 housenumber: ""
 phone: ""
 opening_hours: ""
