--- a/data/cities/santa-cruz-de-la-sierra/fotocopias-tercer-anillo-interno.yml
+++ b/data/cities/santa-cruz-de-la-sierra/fotocopias-tercer-anillo-interno.yml
@@ -1,10 +1,10 @@
-id: 441302316
+id: 4403090712
 type: node
-latitude: -17.78568
-longitude: -63.20416
+latitude: -17.76905
+longitude: -63.20109
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida Roca y Coronado
+street: Tercer Anillo Interno
 housenumber: ""
 phone: ""
 opening_hours: ""
