--- a/data/cities/santa-cruz-de-la-sierra/fotocopias.yml
+++ b/data/cities/santa-cruz-de-la-sierra/fotocopias.yml
@@ -1,11 +1,11 @@
-id: 4403090712
+id: 4403524664
 type: node
-latitude: -17.76905
-longitude: -63.20109
+latitude: -17.78562
+longitude: -63.17978
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Tercer Anillo Interno
-housenumber: ""
+street: Calle Ñuflo de Chávez
+housenumber: "143"
 phone: ""
 opening_hours: ""
 website: ""
