--- a/data/cities/samaipata/lavanderia.yml
+++ b/data/cities/samaipata/lavanderia.yml
@@ -1,10 +1,10 @@
-id: 5137808328
+id: 5134110623
 type: node
-latitude: -18.17889
-longitude: -63.87344
+latitude: -18.1817
+longitude: -63.87563
 postcode: ""
 city: Samaipata
-street: Calle Campero
+street: Calle Rubén Terrazas
 housenumber: ""
 phone: ""
 opening_hours: ""
