--- a/data/cities/santa-cruz-de-la-sierra/synergy.yml
+++ b/data/cities/santa-cruz-de-la-sierra/synergy.yml
@@ -1,10 +1,10 @@
-id: 11221659067
+id: 406545907
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.72005
+longitude: -63.16328
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida José Banegas
+street: Avenida Cristo Redentor
 housenumber: ""
 phone: ""
 opening_hours: ""
