--- a/data/cities/santa-cruz-de-la-sierra/tienda-claracuta.yml
+++ b/data/cities/santa-cruz-de-la-sierra/tienda-claracuta.yml
@@ -1,11 +1,11 @@
-id: 11221659067
+id: 10884492505
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.73228
+longitude: -63.1577
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida José Banegas
+street: Calle Claracuta
 housenumber: ""
-phone: ""
+phone: "67595177"
 opening_hours: ""
 website: ""
