--- a/data/cities/santa-cruz-de-la-sierra/wow-avenida-roca-y-coronado.yml
+++ b/data/cities/santa-cruz-de-la-sierra/wow-avenida-roca-y-coronado.yml
@@ -1,10 +1,10 @@
-id: 11221659067
+id: 441302316
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.78568
+longitude: -63.20416
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida José Banegas
+street: Avenida Roca y Coronado
 housenumber: ""
 phone: ""
 opening_hours: ""
