--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales-2.yml
@@ -1,11 +1,11 @@
-id: 4553114027
+id: 7126777090
 type: node
-latitude: -16.52322
-longitude: -68.14986
+latitude: -16.52894
+longitude: -68.15193
 postcode: ""
 city: Ciudad Satélite
 street: Calle Hermano E. Morales
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: ""
 website: ""
