--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales.yml
@@ -1,11 +1,11 @@
-id: 4553114026
+id: 4553114027
 type: node
-latitude: -16.52351
-longitude: -68.14981
+latitude: -16.52322
+longitude: -68.14986
 postcode: ""
 city: Ciudad Satélite
 street: Calle Hermano E. Morales
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-18:00
 website: ""
