--- a/data/cities/ciudad-satelite/tienda-de-variedades.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades.yml
@@ -1,11 +1,11 @@
-id: 4564028105
+id: 4553114026
 type: node
-latitude: -16.51864
-longitude: -68.15113
+latitude: -16.52351
+longitude: -68.14981
 postcode: ""
 city: Ciudad Satélite
-street: Calle Nuñez del Prado
+street: Calle Hermano E. Morales
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 09:00-18:00
+opening_hours: ""
 website: ""
