--- a/data/cities/santa-cruz-de-la-sierra/correa-machinery.yml
+++ b/data/cities/santa-cruz-de-la-sierra/correa-machinery.yml
@@ -1,10 +1,10 @@
-id: 11221659067
+id: 12209493229
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.71901
+longitude: -63.1636
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida José Banegas
+street: Avenida Cristo Redentor
 housenumber: ""
 phone: ""
 opening_hours: ""
