--- a/data/cities/santa-cruz-de-la-sierra/tienda-c-o.yml
+++ b/data/cities/santa-cruz-de-la-sierra/tienda-c-o.yml
@@ -1,10 +1,10 @@
-id: 11221659067
+id: 6618063193
 type: node
-latitude: -17.78287
-longitude: -63.20789
+latitude: -17.73375
+longitude: -63.15745
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida José Banegas
+street: Calle 10 de Noviembre
 housenumber: ""
 phone: ""
 opening_hours: ""
