--- a/data/cities/santa-cruz-de-la-sierra/wow.yml
+++ b/data/cities/santa-cruz-de-la-sierra/wow.yml
@@ -1,11 +1,11 @@
-id: 441302316
+id: 409548506
 type: node
-latitude: -17.78568
-longitude: -63.20416
+latitude: -17.77341
+longitude: -63.19064
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida Roca y Coronado
+street: Avenida Busch
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: 24/7
 website: ""
