--- a/data/cities/villazon/productos-tintilay.yml
+++ b/data/cities/villazon/productos-tintilay.yml
@@ -1,11 +1,11 @@
-id: 11073316171
+id: 11074349664
 type: node
-latitude: -22.09273
-longitude: -65.59629
+latitude: -22.09236
+longitude: -65.59562
 postcode: ""
 city: Villazón
-street: Avenida República Argentina
-housenumber: "135"
+street: Calle Tupiza
+housenumber: "179"
 phone: ""
 opening_hours: Mo-Sa 08:00-18:00
 website: ""
