update content and data

--- a/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-arturo-ballivian-otero.yml
@@ -1,11 +1,11 @@
-id: 6682084258
+id: 6685126586
 type: node
-latitude: -16.52488
-longitude: -68.15187
+latitude: -16.53025
+longitude: -68.15409
 postcode: ""
 city: Ciudad Satélite
 street: Arturo Ballivian Otero
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-18:00
 website: ""
