--- a/data/cities/cochabamba/imcruz-avenida-america-3.yml
+++ b/data/cities/cochabamba/imcruz-avenida-america-3.yml
@@ -1,11 +1,11 @@
-id: 974844238
+id: 974844222
 type: node
-latitude: -17.37317
-longitude: -66.15858
+latitude: -17.37285
+longitude: -66.15952
 postcode: ""
 city: Cochabamba
 street: Avenida América
-housenumber: ""
+housenumber: "342"
 phone: ""
-opening_hours: ""
-website: https://www.imcruz.com/
+opening_hours: Mo-Fr 09:00-19:30; Sa 09:00-16:30
+website: ""
