update content and data

--- a/data/cities/ciudad-satelite/peluqueria-avenida-del-policia-2.yml
+++ b/data/cities/ciudad-satelite/peluqueria-avenida-del-policia-2.yml
@@ -1,10 +1,10 @@
-id: 7552806297
+id: 9362453550
 type: node
-latitude: -16.52658
-longitude: -68.1536
+latitude: -16.5276
+longitude: -68.14851
 postcode: ""
 city: Ciudad Satélite
-street: Calle 25-B
+street: Avenida del Policía
 housenumber: ""
 phone: ""
 opening_hours: ""
