--- a/data/cities/cochabamba/kampesino.yml
+++ b/data/cities/cochabamba/kampesino.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Cochabamba
 street: Calle Bartolomé de las Casas
 housenumber: "1357"
-phone: ""
-opening_hours: Mo-Fr 08:30-16:30
+phone: +591 76429186
+opening_hours: Mo-Fr 08:00-18:00;Sa-Su,PH Off
 website: ""
