--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales-7.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-hermano-e-morales-7.yml
@@ -1,10 +1,10 @@
-id: 7552806297
+id: 8346432152
 type: node
-latitude: -16.52658
-longitude: -68.1536
+latitude: -16.52776
+longitude: -68.15141
 postcode: ""
 city: Ciudad Satélite
-street: Calle 25-B
+street: Calle Hermano E. Morales
 housenumber: ""
 phone: ""
 opening_hours: ""
