--- a/data/cities/santa-cruz-de-la-sierra/precision-eyewear-calle-ballivian.yml
+++ b/data/cities/santa-cruz-de-la-sierra/precision-eyewear-calle-ballivian.yml
@@ -1,10 +1,10 @@
-id: 11221071389
+id: 4400008515
 type: node
-latitude: -17.78523
-longitude: -63.20903
+latitude: -17.78458
+longitude: -63.17941
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Avenida Roca y Coronado
+street: Calle Ballivián
 housenumber: ""
 phone: ""
 opening_hours: ""
