--- a/data/cities/santa-cruz-de-la-sierra/precision-eyewear.yml
+++ b/data/cities/santa-cruz-de-la-sierra/precision-eyewear.yml
@@ -1,11 +1,11 @@
-id: 4400008515
+id: 4394882228
 type: node
-latitude: -17.78458
-longitude: -63.17941
+latitude: -17.78365
+longitude: -63.18363
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Calle Ballivián
+street: Calle 21 de Mayo
 housenumber: ""
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Fr 09:00-12:30,15:00-22:00
 website: ""
