update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio.yml
@@ -1,10 +1,10 @@
-id: 4548572051
+id: 4564028103
 type: node
-latitude: -16.52596
-longitude: -68.15064
+latitude: -16.51944
+longitude: -68.15124
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hno. E. Morales
+street: Calle Nuñez del Prado
 housenumber: ""
 phone: ""
 opening_hours: ""
