--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c.yml
@@ -1,11 +1,11 @@
-id: 4548572010
+id: 4548572009
 type: node
-latitude: -16.53063
-longitude: -68.15232
+latitude: -16.53062
+longitude: -68.15236
 postcode: ""
 city: Ciudad Satélite
 street: Calle 29 C
-housenumber: ""
+housenumber: "2103"
 phone: ""
 opening_hours: Mo-Sa 09:00-18:00
 website: ""
