--- a/data/cities/ciudad-satelite/venta-de-ropa.yml
+++ b/data/cities/ciudad-satelite/venta-de-ropa.yml
@@ -1,11 +1,11 @@
-id: 4548572052
+id: 4400066933
 type: node
-latitude: -16.52575
-longitude: -68.15055
+latitude: -16.52461
+longitude: -68.14964
 postcode: ""
 city: Ciudad Satélite
-street: Calle Hno. E. Morales
+street: Avenida Satélite
 housenumber: ""
-phone: +591 70146392
-opening_hours: Mo-Sa 09:00-18:00
+phone: ""
+opening_hours: ""
 website: ""
