--- a/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c-2.yml
+++ b/data/cities/ciudad-satelite/tienda-de-variedades-calle-29-c-2.yml
@@ -1,10 +1,10 @@
-id: 7575530305
+id: 4548572010
 type: node
-latitude: -16.52632
-longitude: -68.15394
+latitude: -16.53063
+longitude: -68.15232
 postcode: ""
 city: Ciudad Satélite
-street: Calle 25-B
+street: Calle 29 C
 housenumber: ""
 phone: ""
 opening_hours: Mo-Sa 09:00-18:00
