--- a/data/cities/cochabamba/ecobikes.yml
+++ b/data/cities/cochabamba/ecobikes.yml
@@ -1,10 +1,10 @@
-id: 8597535066
+id: 12299592166
 type: node
-latitude: -17.39153
-longitude: -66.15798
+latitude: -17.39856
+longitude: -66.17597
 postcode: ""
 city: Cochabamba
-street: Calle Mariano Baptista
+street: Avenida Litoral
 housenumber: ""
 phone: ""
 opening_hours: ""
