--- a/data/cities/santa-cruz-de-la-sierra/fotocopias.yml
+++ b/data/cities/santa-cruz-de-la-sierra/fotocopias.yml
@@ -1,11 +1,11 @@
-id: 4403524664
+id: 4403090712
 type: node
-latitude: -17.78562
-longitude: -63.17978
+latitude: -17.76905
+longitude: -63.20109
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Calle Ñuflo de Chávez
-housenumber: "143"
+street: Tercer Anillo Interno
+housenumber: ""
 phone: ""
 opening_hours: ""
 website: ""
