update content and data

--- a/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-3.yml
+++ b/data/cities/ciudad-satelite/tienda-de-barrio-avenida-escalona-y-aguero-3.yml
@@ -1,11 +1,11 @@
-id: 8018551563
+id: 9764723495
 type: node
-latitude: -16.52219
-longitude: -68.15589
+latitude: -16.52418
+longitude: -68.15674
 postcode: ""
 city: Ciudad Satélite
 street: Avenida Escalona y Aguero
 housenumber: ""
 phone: ""
-opening_hours: Mo-Sa 08:00-18:00
+opening_hours: ""
 website: ""
