--- a/data/cities/cochabamba/coffee-time.yml
+++ b/data/cities/cochabamba/coffee-time.yml
@@ -1,10 +1,10 @@
-id: 9936895605
+id: 4244817732
 type: node
-latitude: -17.38773
-longitude: -66.17918
+latitude: -17.38279
+longitude: -66.15442
 postcode: ""
 city: Cochabamba
-street: Avenida d'Orbigny
+street: Pasaje Murillo
 housenumber: ""
 phone: ""
 opening_hours: ""
