--- a/data/cities/cochabamba/copyshop.yml
+++ b/data/cities/cochabamba/copyshop.yml
@@ -1,10 +1,10 @@
-id: 9936895605
+id: 9794007607
 type: node
-latitude: -17.38773
-longitude: -66.17918
+latitude: -17.38091
+longitude: -66.14845
 postcode: ""
 city: Cochabamba
-street: Avenida d'Orbigny
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
