--- a/data/cities/santa-cruz-de-la-sierra/lupo-calle-florida.yml
+++ b/data/cities/santa-cruz-de-la-sierra/lupo-calle-florida.yml
@@ -1,10 +1,10 @@
-id: 4392641808
+id: 4377609034
 type: node
-latitude: -17.78296
-longitude: -63.18394
+latitude: -17.78172
+longitude: -63.18229
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Junín
+street: Calle Florida
 housenumber: ""
 phone: ""
 opening_hours: ""
