update content and data

--- a/data/cities/riberalta/el-palacio-de-las-bolsitas-carlita.yml
+++ b/data/cities/riberalta/el-palacio-de-las-bolsitas-carlita.yml
@@ -1,10 +1,10 @@
-id: 531946988
+id: 5076138921
 type: node
-latitude: -10.9998
-longitude: -66.07749
+latitude: -11.00032
+longitude: -66.07823
 postcode: ""
 city: Riberalta
-street: Avenida Sucre
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
