--- a/data/cities/cochabamba/libreria-avenida-manuel-isidoro-belzu.yml
+++ b/data/cities/cochabamba/libreria-avenida-manuel-isidoro-belzu.yml
@@ -1,10 +1,10 @@
-id: 4619839976
+id: 8614022841
 type: node
-latitude: -17.38472
-longitude: -66.15764
+latitude: -17.39799
+longitude: -66.13986
 postcode: ""
 city: Cochabamba
-street: Avenida José Ballivián
+street: Avenida Manuel Isidoro Belzu
 housenumber: ""
 phone: ""
 opening_hours: ""
