--- a/data/cities/santa-cruz-de-la-sierra/opti-corp-junin.yml
+++ b/data/cities/santa-cruz-de-la-sierra/opti-corp-junin.yml
@@ -1,10 +1,10 @@
-id: 4394915415
+id: 4392641808
 type: node
-latitude: -17.78233
-longitude: -63.18377
+latitude: -17.78296
+longitude: -63.18394
 postcode: ""
 city: Santa Cruz de la Sierra
-street: Calle 21 de Mayo
+street: Junín
 housenumber: ""
 phone: ""
 opening_hours: ""
